# bot-solana-memcoin-trading

./: .env.sample  .gitignore  Cargo.toml  README.md  jupiter-qoute-res-sample.json  prompt.md  rug_check_res_sample.json  rustfmt.toml  sample-data.json  tokens.db
.sqlx/: query-0428113450f9459e4a3fe2fe4380e9458fdefee0e30f5d2f821da30b89ea07d3.json  query-b298f622989f725a2e5168b4697ffa336afa52201c2beae527acdff96f39c794.json
migrations/: 20250128154322_add_token_table.down.sql  20250128154322_add_token_table.up.sql  20250203135955_token.sql
script/: sql.sql
src/: config.rs  database.rs  db.rs  main.rs  model.rs  price_monitor.rs  rug_checker.rs  telegram.rs  transaction_processor.rs  websocket.rs
