[package]
name = "bot-solana-memcoin-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
telegram-bot = "0.8.0"
tokio = { version = "1.43.0", features = ["full"] }
