[package]
name = "bot-solana-memcoin-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
reqwest = { version = "0.12.12", features = ["json"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "runtime-tokio", "macros", "chrono"] }
solana-sdk = "2.2.0"
url = "2.0"
hex = "0.4.3"
thiserror = "2.0.11"
futures = "0.3.31"
teloxide = { version = "0.13.0", features = ["macros"] }
bs58 = "0.5.1"

